src/themes/dark/main.css
/* Generell Tag Classes */
BODY
{
    BACKGROUND-COLOR: #000000;
    FONT-FAMILY: ARIAL;
    FONT-SIZE: 8pt;
	COLOR: #F3F3F1; 

	scrollbar-face-color: #475059;
	scrollbar-highlight-color: #b8c2cc;
	scrollbar-shadow-color: #b8c2cc; 
	scrollbar-3dlight-color: #000000; 
	scrollbar-arrow-color: #f2f5ff; 
	scrollbar-track-color: #262d34; 
	scrollbar-darkshadow-color: #000000;
}

TD { font-family: Arial, Helvetica, sans-serif; font-size: 8pt; color: #F3F3F1 }

/* Link Classes */
.playerlink { color:#006699;  cursor:hand; }
.playerlink:hover { color:#FF0A0C; text-decoration: none; cursor:hand; }

/* Default Link Classes */
a:link,a:active,a:visited,a.postlink
{
	FONT: Verdana, Arial, Helvetica, sans-serif;
	font-weight:bold;
	background-color: transparent;
	color:#FFD323;
	text-decoration:none;
}
a:hover
{
	FONT: Verdana, Arial, Helvetica, sans-serif;
	font-weight:bold;
	color:#EF9A00;
}

img
{
	border: 0px;
}

/* Title Classes */
.title 
{
	FONT: bold 11px Verdana, Arial, Helvetica, sans-serif; 
	COLOR: #E5F377;
	height: 20px;
	text-align:center;
	vertical-align:middle;

    background-color: #1C1014;
    background-image: url(images/bg_3.png);
    background-repeat: repeat-x;
}
A.title, A.title:active, A.title:visited 
{
	FONT: bold 11px Verdana, Arial, Helvetica, sans-serif;
	COLOR: #dd6900;
	TEXT-DECORATION: none;
}
A.title:hover 
{
	FONT: bold 11px Verdana, Arial, Helvetica, sans-serif;
	COLOR: #FF0A0C; 
	TEXT-DECORATION: none;
}
.titleSecond
{
	FONT: bold 10px Verdana, Arial, Helvetica, sans-serif; 
	COLOR: #E5F377;
	height: 18px;
	text-align:center;
	vertical-align:middle;

    background-color: #1C1014;
    background-image: url(images/bg_4.png);
    background-repeat: repeat-x;
}

/* Default Font Classes */
font
{
	font-family: Verdana, Arial, Helvetica, sans-serif;
	font-size: 8pt;
}

/* Table / Border Classes */
.table_with_border
{ 
	background-color:#141618;
	border:1px solid;
	border-color: #233B51 #124A7C #000000 #233B51; 
}

.table_with_border_second
{ 
	background-color:#19232D;
	border:1px solid;
	border-color: #050A0F #050A0F #050A0F #050A0F; 
}

.with_border
{
	text-indent:3px;
	background-color:#1C2021;
	border:1px solid;
	border-color: #334457 #263340 #263340 #334457; 
}

.with_border_alternate
{
	text-indent:3px;
	background-color:#220D0D;
	border:1px ridge;
	border-color: #712B2C #4A1C1D #4A1C1D #712B2C; 
}

.mainheader
{ 
	border:1px solid;
	background-color:#1C2021;
	border-color: #006699 #07233F #07233F #006699; 
}

.mainfooter
{ 
	height: 20px;
	background-color:#1C2021;
	border-top: #050A0F 1px solid;
	border-bottom: #050A0F 1px solid;
}

.imageborder
{
	border:1px solid;
	border-color: #050A0F #353A3F #353A3F #050A0F; 
}

/* Cells for listening */
.line0
{
	font-size: 8pt;
	color: #B9B597;
	background-color: #0E161F;
}
.line0:hover 
{ 
	background-color:#3D4751; 
}

.line1
{
	font-size: 8pt;
	color: #B9B597;
	background-color: #152331;
}
.line1:hover 
{ 
	background-color:#3D4751; 
}

.line2
{
	font-size: 8pt;
	color: #B9B597;
	background-color: #1D3043;
}
.line2:hover 
{ 
	background-color:#3D4751; 
}
.tableBackground
{
	font-size: 8pt;
	color: #000000;
	background-color: #1D3043;
}

/* Cell Columns */
.cellmenu1
{
	height: 16px;
	border:1px ridge;
	border-color: #353A3F #050A0F #050A0F #353A3F; 

	text-indent:5px;
	font-family: 10px Verdana, Arial, Helvetica, sans-serif;
	color: #FFFCE5;

	background-color: #103B65;
    background-image: url(images/bg_1.png);
    background-repeat: repeat-x;
}
.cellmenu1_naked
{
	height: 16px;
	border:1px ridge;
	border-color: #353A3F #050A0F #050A0F #353A3F; 

	text-indent:5px;
	font-family: 10px Verdana, Arial, Helvetica, sans-serif;
	color: #FFFCE5;

	background-color: #103B65;
}
.cellmenu1:hover, .cellmenu1_naked:hover
{ 
	color: #FFFF33;
	text-decoration: none;
}
A.cellmenu1_link
{
	color: #FFFF33;
	text-decoration: underline;
}
A.cellmenu1_link:hover
{
	color: #FF5500;
	text-decoration: none;
}

.cellmenu2
{
	height: 16px;
	border:1px ridge;
	border-color: #7777AA #12161A #12161A #7777AA;

	text-indent:5px;
	font-family: 10px Verdana, Arial, Helvetica, sans-serif;
	color: #FFFCE5;

	background-color: #053841;
    background-image: url(images/bg_2.png);
    background-repeat: repeat-x;
}
.cellmenu2_naked
{
	height: 16px;
	border:1px ridge;
	border-color: #7777AA #12161A #12161A #7777AA;

	text-indent:5px;
	font-family: 10px Verdana, Arial, Helvetica, sans-serif;
	color: #FFFCE5;

	background-color: #053841;
}
.cellmenu2:hover, .cellmenu2_naked:hover
{ 
	color: #FFFF33;
	text-decoration: none;
}

/* Usefull Text Classes */
.WinnerTeam
{
	color: #127C35;
	text-decoration: none;
}
.LoserTeam
{
	color: #A53139;
	text-decoration: none;
}
.DrawTeam
{
	color: #2B78AB;
	text-decoration: none;
}
.ErrorMsg 
{
	FONT: bold 12px Verdana, Arial, Helvetica, sans-serif; 
	COLOR: #FF2222;
	border-top: 1px solid;
	border-bottom: 1px solid;
	border-color: #58363E;
}


/* Player Elements */
.playerlegend
{
	padding:2px;
	background-color: #1B689B; 
	color: #FFFFFF; 
}

.playertext
{
	filter: glow(Color=#000000,Strength=1); 
}

/* Form elements */
select, input, textarea
{
	background-color: #0B253C; 
	color:#FFFFFF; 
	font:bold 10px Verdana,Arial,Helvetica,sans-serif;
	border: 1px solid;
	border-color: #233B51 #124A7C #124A7C #233B51; 
}

/* TOP Menu Classes */
.topmenu1begin
{
	height: 20px;
	border:0px;
	padding: 2px 2px 0px 2px;
	vertical-align: middle;

	background-color: #1F3349;
}
.topmenu1
{
	height: 20px;
	border:1px ridge;
	border-color: #09506C #557986 #09506C #09506C;
	padding: 2px 2px 0px 2px;
	vertical-align: middle;

	font: 10px Verdana, Arial, Helvetica, sans-serif;
	color: #FFFFFF;
	background-color: #1F3349;
}
.topmenu1:hover 
{ 
	color: #FFFF99;
	border:1px inset;
	border-color: #8EB4C0 #557986 #09506C #09506C;
	background-color: #516776;
	text-decoration: none;
}
.topmenu1end
{
	height: 20px;
	font: 10px Verdana, Arial, Helvetica, sans-serif;
	color: #FFFFFF;
	background-color: #1F3349;
}

.topmenu2begin
{
	height: 16px;
	border: 0px;
	padding: 2px 2px 0px 2px;
	vertical-align: middle;

	background-color: #566984;
}
.topmenu2
{
	height: 16px;
	border:1px ridge;
	border-color: #09506C #557986 #09506C #09506C;
	padding: 2px 2px 0px 2px;
	vertical-align: middle;

	font: 10px Verdana, Arial, Helvetica, sans-serif;
	color: #FFFFFF;
	background-color: #566984;
}
.topmenu2:hover 
{ 
	color: #FFFF99;
	border:1px inset;
	border-color: #09506C #557986 #09506C #09506C;
	background-color: #7082A0;
	text-decoration: none;
}
.topmenu2end
{
	height: 16px;
	border:1px inset;
	border-color: #09506C #557986 #09506C #09506C;
	font: 10px Verdana, Arial, Helvetica, sans-serif;
	color: #FFFFFF;
	background-color: #566984;
}

.topmenu3begin
{
	height: 16px;
	border:0px;
	padding: 2px 2px 0px 2px;
	vertical-align: middle;

	background-color: #5D77A1;
}
.topmenu3
{
	height: 16px;
	border:1px ridge;
	border-color: #09506C #557986 #09506C #09506C;
	padding: 2px 2px 0px 2px;
	vertical-align: middle;

	font: 10px Verdana, Arial, Helvetica, sans-serif;
	color: #FFFFFF;
	background-color: #5D77A1;
}
.topmenu3:hover 
{ 
	color: #FFFF99;
	border:1px inset;
	border-color: #09506C #557986 #09506C #09506C;
	background-color: #7D92B3;
	text-decoration: none;
}
.topmenu3end
{
	height: 16px;
	border:1px inset;
	border-color: #09506C #557986 #09506C #09506C;
	font: 10px Verdana, Arial, Helvetica, sans-serif;
	color: #FFFFFF;
	background-color: #5D77A1;
}

.topmenu1_link, a.topmenu1_link, a.topmenu1_link:visited, .topmenu2_link, a.topmenu2_link, a.topmenu2_link:visited, .topmenu3_link, a.topmenu3_link, a.topmenu3_link:visited 
{
	color: #FFDD22;
	font-weight:bold;
	text-decoration: none;
}
.topmenu1_link:hover, .topmenu2_link:hover, .topmenu3_link:hover
{
	color: #FFFF99;
	font-weight:bold;
	text-decoration: none;
}

